--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,7 @@ DB_USER=root
 DB_PASSWORD=1234
 DB_NAME=celestia_airlines
 PORT=5000
+EMAIL_USER=your_gmail_address@gmail.com
+EMAIL_PASS=your_gmail_app_password
+FRONTEND_URL=http://localhost:5173
+JWT_SECRET=your_jwt_secret
